terraform/test-data/terraform/variables/tf-modules-subdirs/variables.tf
variable "fake_var_1" {}
variable "fake_var_2" {}
<error descr="Variable 'main_duplicate' declared multiple times">variable "main_duplicate" {}</error>
variable "fake_var_3" {}
